--- a/bankaccount/index.html
+++ b/bankaccount/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M13 Assignment - The Bank Account Application</title>
     <script src="js/script.js"></script>
 </head>
+
 <body>
-    
+    <main>
+        <h1>The Bank Application</h1>
+        <div>
+            <button id="name">Name</button>
+        </div><br>
+        <div>
+            <button id="deposit">Deposit</button>
+        </div><br>
+        <div>
+            <button id="withdrawl">Withdrawl</button>
+        </div><br>
+        <div>
+            <p>User Name: <span id="username"></span></p>
+        </div>
+        <div>
+            <p>A Deposit of: $<span id="usercredit"></span>.00</p>
+        </div>
+        <div>
+            <p>A withdrawl of: $<span id="userdebit"></span>.00</p>
+        </div>
+        <div>
+            <p>Total Balance: $<span id="userbalance"></span>.00</p>
+        </div>
+    </main>
 </body>
+
 </html>
