--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,26 @@
 <body>
     <main>
         <h1>Zak's Life in a Slide Show</h1>
-        <p><input type="button" id="play_pause" value="Pause"></p>
+        <p><input type="button" id="play_pause" value="Pause"><input type="button" id="speed" value="Speed"></p>
+
         <p><img src="images/wakeboard.jpg" id="image" alt=""></p>
         <p><span id="caption">He likes to wakeboard</span></p>
+        <div>
+            <p>To set speed: </p>
+        </div>
+        <div class="list">
+
+            <ol>
+                <li>click pause</li>
+                <li>click speed</li>
+                <li>click resume</li>
+            </ol>
+        </div>
+        <div>
+            <p>The speed is set to <span id="seconds"></span> milleseconds.</p>
+        </div>
+
     </main>
 </body>
+
 </html>
